<resources>
    <string name="app_name">NasaPicture</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="search_text">Найти в тексте</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="text_helper_text">Поищите термин в тексте</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="deflt">Default</string>
    <string name="entry">Entry</string>
    <string name="choice">Choice</string>
    <string name="action">Action</string>
    <string name="filter">Filter</string>
    <string name="background_color">Background Color</string>
    <string name="ripple_color">Ripple Color</string>
    <string name="chip_icon">Chip icon</string>
    <string name="chip">Chip</string>
    <string name="group">Group</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="choose_one">Choose One</string>
    <string name="choice_a">Choice A</string>
    <string name="choice_b">Choice B</string>
    <string name="choice_c">Choice C</string>
    <string name="in">in</string>
    <string name="single">single</string>
    <string name="line">line</string>
    <string name="add">add</string>
    <string name="a">a</string>
    <string name="horizontal">horizontal</string>
    <string name="scroll">scroll</string>
    <string name="close_icon_listener">Close Icon Listener</string>
    <string name="screen1">Transition</string>
    <string name="screen2">ObjectAnimator</string>
    <string name="fab_demonstration">FAB demonstration</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_mars">Mars</string>
    <string name="theme_moon">Moon</string>
    <string name="theme_earth">Earth</string>
    <string name="theme_dark">Dark</string>
    <string name="raised_button">Raised Button</string>
    <string name="unelevated_button">Unelevated Button</string>
    <string name="outlined_button">Outlined Button</string>
    <string name="text_button">Text Button</string>
    <string name="checkbox">Checkbox</string>
    <string name="radio_button">Radio Button</string>
    <string name="switch_mat">Switch</string>
    <string name="filled_box_text_field">Filled Box Text Field</string>
    <string name="text">Text</string>
    <string name="outlined_box_text_field">Outlined Box Text Field</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="card">Card</string>
    <string name="test">Test</string>
    <string name="next">Next</string>
    <string name="date_prev"><![CDATA[<<<]]></string>
    <string name="date_next"><![CDATA[>>>]]></string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="weather">Weather</string>
    <string name="title">Title</string>
    <string name="titleEarth">EARTH</string>
    <string name="titleMars">MARS</string>
    <string name="titleWeather">WEATHER</string>
    <string name="subtitle">Subtitle</string>
    <string name="subtitleEarth">from space</string>
    <string name="subtitleMars">Perseverance</string>
    <string name="subtitleWeather">of space</string>
    <string name="screen3">ConstraintSet</string>
    <string name="statelistanimator_example">StateListAnimator Example</string>
    <string name="krater_description">На фото видно камни и песок в кратере Даниэлсона (диаметр кратера около 67 км), расположенного на юго-востоке области Arabia Terra.</string>
    <string name="tap_for_info">Tap for info</string>
    <string name="date_5_2018">5 июня 2018 г.</string>
    <string name="krater_name">Кратер Даниэлсона</string>
    <string name="show_description">Показать описание</string>
    <string name="tap_on_me">TAP ON ME</string>
    <string name="shuffle">SHUFFLE</string>
    <string name="animate">Animate</string>
    <string name="transitions_example">Transitions example</string>
    <string name="path">Path</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>

    <string name="pause_left">M26,23 V41</string>
    <string name="pause_right">M37,23 L37,32 L37,41</string>
    <string name="pause_right_play">M26,23 L41,32 L27,41</string>
    <string name="clockwise_circle">M32,8 A24,24 0 1 1 31.99,8 z</string>
    <string name="recycler">Recycler</string>
    <string name="notes">Notes</string>
    <string name="enter_your_note_here">Enter your note here</string>
    <string name="header_of_your_note">Header of your note</string>
    <string name="head">Заголовок</string>
</resources>