<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_one"
            android:icon="@drawable/ic_archive"
            android:title="@string/screen1" />
        <item
            android:id="@+id/navigation_two"
            android:icon="@drawable/ic_send"
            android:title="@string/screen2" />
        <item
            android:id="@+id/navigation_three"
            android:icon="@drawable/ic_sharp_cast_for_education_24"
            android:title="@string/screen3" />
        <item
            android:id="@+id/navigation_four"
            android:icon="@drawable/ic_wikipedia"
            android:title="@string/recycler" />
        <item
            android:id="@+id/navigation_five"
            android:icon="@drawable/ic_baseline_comment_24"
            android:title="@string/notes" />

    </group>
</menu>