<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_mars"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_date_prev_mars"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_prev" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_next_mars"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_date_next_mars"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_next" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_view_mars"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        app:srcCompat="@drawable/bg_mars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/swipe_indicator_passive" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/swipe_indicator_active" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/swipe_indicator_passive" />
    </LinearLayout>
</FrameLayout>
