<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/padding10"
            android:paddingEnd="@dimen/padding10">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_wiki"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:endIconMode="custom"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintBottom_toTopOf="@+id/scroll_chip_group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <HorizontalScrollView
                android:id="@+id/scroll_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_date_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="23-06-2021" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="24-06-2021" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="25-06-2021" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>


            <ru.geekbrains.android2.nasapicture.util.EquilateralImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scroll_chip_group"
                app:srcCompat="@drawable/ic_no_photo_vector" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

        <include layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="?attr/colorPrimary"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSecondary"
        android:contentDescription="@string/fab_demonstration"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus_fab"
        app:tint="#FFFFFF" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>