<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:orientation="horizontal">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_date_prev_weather"
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_prev" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_next_weather"
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_date_next_weather"
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_next" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_date_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin8"
                android:layout_marginEnd="@dimen/margin8"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/text_msg_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin8"
                android:layout_marginEnd="@dimen/margin8"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/image_view_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/bg_system" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/swipe_indicator_passive" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/swipe_indicator_passive" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/swipe_indicator_active" />
    </LinearLayout>
</FrameLayout>
